# PHRI-SS26

./: .gitignore  README.md
info/: ROS2_nodegraph_sketch.excalidraw  phri-reference-guide.md  ros2 topics.txt  ros_commands.txt
ros_ws/src/brewbot/: package.xml  setup.cfg  setup.py
ros_ws/src/brewbot/brewbot/: arm_controller.py  asr_vosk.py  asr_whisper.py  elmo_sim.py  fixed_camera_tag_tracker.py  interaction_manager.py  nlp.py  sensor_hr.py  state_estimator.py  tts.py  web_ui.py
ros_ws/src/brewbot/config/: arm_camera_apriltags.yaml  fixed_camera_apriltags.yaml
ros_ws/src/brewbot/launch/: arm_camera_apriltags.launch.py  fixed_camera_apriltags.launch.py
ros_ws/src/brewbot/test/: test_elmo_settle.py
ros_ws/src/brewbot_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/brewbot_interfaces/action/: BringDrink.action  SuggestDrink.action
scripts/: arm_teleop.py  brewbot.launch.py  kinova_sim_setup.sh  kitchen_scene.py  sim.launch.py
